small html change

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="forms">
             <div class="form">
                 <form class="start-form">
-                    Paste Essay / Stuff here <br>
-                    <textarea rows="5" cols="40" name="test" form="usrform" id="before">Enter text here...</textarea><br>
+                    Paste Essay / Stuff here 
+                    <br><textarea title="Top box" rows="5" cols="40" name="test" form="usrform" id="before">Enter text here...</textarea><br>
                     <div class="checkbox-container">
                         <label for="special-spaces">Special Spaces</label>
                         <input type="checkbox" id="special-spaces" name="special-spaces" checked>
@@ -28,8 +28,8 @@
                     </div>
                 </form>
                 <form class="OUTPUT">
-                    OUTPUT <br>
-                    <textarea rows="5" cols="40" name="test" form="usrform" id="after">OUTPUT WILL BE HERE</textarea><br>
+                    OUTPUT 
+                    <br><textarea title="Bottom Box" rows="5" cols="40" name="test" form="usrform" id="after">OUTPUT WILL BE HERE</textarea><br>
                 </form>
                 <button class="button" onclick="obfuscate()" value="Obfuscate">Obfuscate</button>
             </div>
